--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/css": "^11.10.5",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.3",
+    "@mui/system": "^5.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
